--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "@types/node": "^20.12.11",
     "typescript": "^5.4.5",
     "vitest": "^1.6.0"
+  },
+  "dependencies": {
+    "dayjs": "^1.11.11"
   }
 }
